src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Precualificado__c</fullName>
        <label>¿Precualificado?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>account_type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>decision_making_desc__c</fullName>
        <label>Decisor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                    <label>Sí</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>events_info_type__c</fullName>
        <label>Events</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Calidad</fullName>
                </value>
                <value>
                    <fullName>Coyuntura</fullName>
                </value>
                <value>
                    <fullName>Desayunos</fullName>
                </value>
                <value>
                    <fullName>EEFF</fullName>
                </value>
                <value>
                    <fullName>Emailing</fullName>
                </value>
                <value>
                    <fullName>Noche arte</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>other_prof_prosition_type__c</fullName>
        <label>Other Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent_account__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent_account_assignment__c</fullName>
        <label>Assign To Account Parent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                    <label>Sí</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>parent_account_decision_making_desc__c</fullName>
        <label>Decision Parent Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                    <label>Sí</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>parent_account_other_prof_prosition_type__c</fullName>
        <label>Other Position Parent Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent_account_prof_position_type__c</fullName>
        <label>Position Parent Account</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCIONISTA</fullName>
                    <isActive>false</isActive>
                    <label>ACCIONISTA</label>
                </value>
                <value>
                    <fullName>ADMINISTRADOR</fullName>
                    <isActive>false</isActive>
                    <label>ADMINISTRADOR</label>
                </value>
                <value>
                    <fullName>APODERADO</fullName>
                    <isActive>false</isActive>
                    <label>APODERADO</label>
                </value>
                <value>
                    <fullName>ASISTENTE</fullName>
                    <isActive>false</isActive>
                    <label>ASISTENTE</label>
                </value>
                <value>
                    <fullName>DIRECTORIO</fullName>
                    <isActive>false</isActive>
                    <label>DIRECTORIO</label>
                </value>
                <value>
                    <fullName>GERENTE COMERCIAL</fullName>
                    <isActive>false</isActive>
                    <label>GERENTE COMERCIAL</label>
                </value>
                <value>
                    <fullName>GERENTE DE ADMINISTRACION</fullName>
                    <isActive>false</isActive>
                    <label>GERENTE DE ADMINISTRACION</label>
                </value>
                <value>
                    <fullName>GERENTE DE ADMINISTRACION Y FINANZAS</fullName>
                    <isActive>false</isActive>
                    <label>GERENTE DE ADMINISTRACION Y FINANZAS</label>
                </value>
                <value>
                    <fullName>GERENTE DE CONTABILIDAD</fullName>
                    <isActive>false</isActive>
                    <label>GERENTE DE CONTABILIDAD</label>
                </value>
                <value>
                    <fullName>GERENTE DE FINANZAS</fullName>
                    <isActive>false</isActive>
                    <label>GERENTE DE FINANZAS</label>
                </value>
                <value>
                    <fullName>GERENTE DE OPERACIONES</fullName>
                    <isActive>false</isActive>
                    <label>GERENTE DE OPERACIONES</label>
                </value>
                <value>
                    <fullName>GERENTE DE RRHH</fullName>
                    <isActive>false</isActive>
                    <label>GERENTE DE RRHH</label>
                </value>
                <value>
                    <fullName>GERENTE GENERAL</fullName>
                    <isActive>false</isActive>
                    <label>GERENTE GENERAL</label>
                </value>
                <value>
                    <fullName>JEFE DE ADMINISTRACION Y FINANZAS</fullName>
                    <isActive>false</isActive>
                    <label>JEFE DE ADMINISTRACION Y FINANZAS</label>
                </value>
                <value>
                    <fullName>JEFE DE ADMINISTRACIÓN</fullName>
                    <isActive>false</isActive>
                    <label>JEFE DE ADMINISTRACIÓN</label>
                </value>
                <value>
                    <fullName>JEFE DE CONTABILIDAD</fullName>
                    <isActive>false</isActive>
                    <label>JEFE DE CONTABILIDAD</label>
                </value>
                <value>
                    <fullName>JEFE DE FINANZAS</fullName>
                    <isActive>false</isActive>
                    <label>JEFE DE FINANZAS</label>
                </value>
                <value>
                    <fullName>JEFE DE TESORERIA</fullName>
                    <isActive>false</isActive>
                    <label>JEFE DE TESORERIA</label>
                </value>
                <value>
                    <fullName>OTROS</fullName>
                    <isActive>false</isActive>
                    <label>OTROS</label>
                </value>
                <value>
                    <fullName>PRESIDENTE DE DIRECTORIO</fullName>
                    <isActive>false</isActive>
                    <label>PRESIDENTE DE DIRECTORIO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>phone_1__c</fullName>
        <label>Phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone_1_area_code__c</fullName>
        <label>Phone 1 Area Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>41</fullName>
                    <label>Amazonas - 41</label>
                </value>
                <value>
                    <fullName>43</fullName>
                    <label>Ancash - 43</label>
                </value>
                <value>
                    <fullName>83</fullName>
                    <label>Apurimac - 83</label>
                </value>
                <value>
                    <fullName>54</fullName>
                    <label>Arequipa - 54</label>
                </value>
                <value>
                    <fullName>66</fullName>
                    <label>Ayacucho - 66</label>
                </value>
                <value>
                    <fullName>76</fullName>
                    <label>Cajamarca - 76</label>
                </value>
                <value>
                    <fullName>84</fullName>
                    <label>Cusco - 84</label>
                </value>
                <value>
                    <fullName>67</fullName>
                    <label>Huancavelica - 67</label>
                </value>
                <value>
                    <fullName>62</fullName>
                    <label>Huanuco - 62</label>
                </value>
                <value>
                    <fullName>56</fullName>
                    <label>Ica - 56</label>
                </value>
                <value>
                    <fullName>64</fullName>
                    <label>Junin - 64</label>
                </value>
                <value>
                    <fullName>44</fullName>
                    <label>La Libertad - 44</label>
                </value>
                <value>
                    <fullName>74</fullName>
                    <label>Lambayeque - 74</label>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>Lima y Callo - 01</label>
                </value>
                <value>
                    <fullName>65</fullName>
                    <label>Loreto - 65</label>
                </value>
                <value>
                    <fullName>82</fullName>
                    <label>Madre de Dios - 82</label>
                </value>
                <value>
                    <fullName>53</fullName>
                    <label>Moquegua - 53</label>
                </value>
                <value>
                    <fullName>63</fullName>
                    <label>Pasco - 63</label>
                </value>
                <value>
                    <fullName>73</fullName>
                    <label>Piura - 73</label>
                </value>
                <value>
                    <fullName>51</fullName>
                    <label>Puno - 51</label>
                </value>
                <value>
                    <fullName>42</fullName>
                    <label>San Martin - 42</label>
                </value>
                <value>
                    <fullName>52</fullName>
                    <label>Tacna - 52</label>
                </value>
                <value>
                    <fullName>72</fullName>
                    <label>Tumbes - 72</label>
                </value>
                <value>
                    <fullName>61</fullName>
                    <label>Ucayali - 61</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>phone_2__c</fullName>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>phone_2_area_code__c</fullName>
        <label>Phone 2 Area Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>41</fullName>
                    <label>Amazonas - 41</label>
                </value>
                <value>
                    <fullName>43</fullName>
                    <label>Ancash - 43</label>
                </value>
                <value>
                    <fullName>83</fullName>
                    <label>Apurimac- 83</label>
                </value>
                <value>
                    <fullName>54</fullName>
                    <label>Arequipa- 54</label>
                </value>
                <value>
                    <fullName>66</fullName>
                    <label>Ayacucho - 66</label>
                </value>
                <value>
                    <fullName>76</fullName>
                    <label>Cajamarca - 76</label>
                </value>
                <value>
                    <fullName>84</fullName>
                    <label>Cusco - 84</label>
                </value>
                <value>
                    <fullName>67</fullName>
                    <label>Huancavelica - 67</label>
                </value>
                <value>
                    <fullName>62</fullName>
                    <label>Huanuco - 62</label>
                </value>
                <value>
                    <fullName>56</fullName>
                    <label>Ica - 56</label>
                </value>
                <value>
                    <fullName>64</fullName>
                    <label>Junin - 64</label>
                </value>
                <value>
                    <fullName>44</fullName>
                    <label>La Libertad - 44</label>
                </value>
                <value>
                    <fullName>74</fullName>
                    <label>Lambayeque - 74</label>
                </value>
                <value>
                    <fullName>01</fullName>
                    <label>Lima y Callao - 01</label>
                </value>
                <value>
                    <fullName>65</fullName>
                    <label>Loreto - 65</label>
                </value>
                <value>
                    <fullName>82</fullName>
                    <label>Madre de Dios - 82</label>
                </value>
                <value>
                    <fullName>53</fullName>
                    <label>Moquegua - 53</label>
                </value>
                <value>
                    <fullName>63</fullName>
                    <label>Pasco - 63</label>
                </value>
                <value>
                    <fullName>73</fullName>
                    <label>Piura - 73</label>
                </value>
                <value>
                    <fullName>51</fullName>
                    <label>Puno - 51</label>
                </value>
                <value>
                    <fullName>42</fullName>
                    <label>San Martin - 42</label>
                </value>
                <value>
                    <fullName>52</fullName>
                    <label>Tacna - 52</label>
                </value>
                <value>
                    <fullName>72</fullName>
                    <label>Tumbes - 72</label>
                </value>
                <value>
                    <fullName>61</fullName>
                    <label>Ucayali - 61</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>primary_account_owner__c</fullName>
        <formula>$User.Id = Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Account Owner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>prof_position_type__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>ACCIONISTA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMINISTRADOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APODERADO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASISTENTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIRECTORIO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERENTE COMERCIAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERENTE DE ADMINISTRACION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERENTE DE ADMINISTRACION Y FINANZAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERENTE DE CONTABILIDAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERENTE DE FINANZAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERENTE DE OPERACIONES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERENTE DE RRHH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GERENTE GENERAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEFE DE ADMINISTRACIÓN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEFE DE ADMINISTRACION Y FINANZAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEFE DE CONTABILIDAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEFE DE FINANZAS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JEFE DE TESORERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OTROS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PRESIDENTE DE DIRECTORIO</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>		
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ACCIONISTA</fullName>
                </value>
                <value>
                    <fullName>PRESIDENTE DE DIRECTORIO</fullName>
                </value>
                <value>
                    <fullName>APODERADO</fullName>
                </value>
                <value>
                    <fullName>DIRECTORIO</fullName>
                </value>
                <value>
                    <fullName>GERENTE GENERAL</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE FINANZAS</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE ADMINISTRACION Y FINANZAS</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE ADMINISTRACION</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE RRHH</fullName>
                </value>
                <value>
                    <fullName>GERENTE COMERCIAL</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE OPERACIONES</fullName>
                </value>
                <value>
                    <fullName>GERENTE DE CONTABILIDAD</fullName>
                </value>
                <value>
                    <fullName>JEFE DE FINANZAS</fullName>
                </value>
                <value>
                    <fullName>JEFE DE TESORERIA</fullName>
                </value>
                <value>
                    <fullName>JEFE DE ADMINISTRACION Y FINANZAS</fullName>
                </value>
                <value>
                    <fullName>JEFE DE ADMINISTRACIÓN</fullName>
                </value>
                <value>
                    <fullName>JEFE DE CONTABILIDAD</fullName>
                </value>
                <value>
                    <fullName>ADMINISTRADOR</fullName>
                </value>
                <value>
                    <fullName>ASISTENTE</fullName>
                </value>
                <value>
                    <fullName>OTROS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_desc__c</fullName>
        <description>Validate the status from Contact</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activo</fullName>
                    <default>true</default>
                    <label>Activo</label>
                </value>
                <value>
                    <fullName>Inactivo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Contact_Validation_Rule_Mobile</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(MobilePhone)), OR(LEN(MobilePhone) &lt;&gt; 9, NOT(ISNUMBER(MobilePhone))))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Please, check that the mobile phone contains 9 digits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Phone1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(phone_1_area_code__c, &quot;01&quot;)), NOT(ISPICKVAL(phone_1_area_code__c, &quot;&quot;)), NOT(ISBLANK(phone_1__c)), OR(LEN(phone_1__c) &lt;&gt; 6, NOT(ISNUMBER(phone_1__c))))</errorConditionFormula>
        <errorDisplayField>phone_1__c</errorDisplayField>
        <errorMessage>Please, check that the Phone 1 contains 6 digits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Phone1_Lima</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(phone_1_area_code__c, &quot;01&quot;),NOT(ISBLANK(phone_1__c)) , OR(LEN(phone_1__c) &lt;&gt; 7, NOT(ISNUMBER(phone_1__c))))</errorConditionFormula>
        <errorDisplayField>phone_1__c</errorDisplayField>
        <errorMessage>Please, check that the Phone 1 contains 7 digits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Phone2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(phone_2_area_code__c, &quot;01&quot;)), NOT(ISPICKVAL(phone_2_area_code__c, &quot;&quot;)), NOT(ISBLANK(phone_2__c)), OR(LEN(phone_2__c) &lt;&gt; 6, NOT(ISNUMBER(phone_2__c))))</errorConditionFormula>
        <errorDisplayField>phone_2__c</errorDisplayField>
        <errorMessage>Please, check that the Phone 2 contains 6 digits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Phone2_Lima</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(phone_2_area_code__c, &quot;01&quot;),NOT(ISBLANK(phone_2__c)) , OR(LEN(phone_2__c) &lt;&gt; 7, NOT(ISNUMBER(phone_2__c))))</errorConditionFormula>
        <errorDisplayField>phone_2__c</errorDisplayField>
        <errorMessage>Please, check that the Phone 2 contains 7 digits.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Position</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(prof_position_type__c, &quot;OTHERS&quot;), ISBLANK(other_prof_prosition_type__c))</errorConditionFormula>
        <errorDisplayField>other_prof_prosition_type__c</errorDisplayField>
        <errorMessage>Please, specify the Other Position information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Position_PA</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(parent_account_prof_position_type__c, &quot;OTHERS&quot;), ISBLANK(parent_account_other_prof_prosition_type__c))</errorConditionFormula>
        <errorDisplayField>parent_account_other_prof_prosition_type__c</errorDisplayField>
        <errorMessage>Please, specify the Other Position Parent Account information.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Req_AC1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(phone_1__c)), ISBLANK(TEXT(phone_1_area_code__c)))</errorConditionFormula>
        <errorDisplayField>phone_1_area_code__c</errorDisplayField>
        <errorMessage>Please, select the Phone 1 Area Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Req_AC2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(phone_2__c)), ISBLANK(TEXT(phone_2_area_code__c)))</errorConditionFormula>
        <errorDisplayField>phone_2_area_code__c</errorDisplayField>
        <errorMessage>Please, select the Phone 2 Area Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Req_Phone1</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(TEXT(phone_1_area_code__c))), ISBLANK(phone_1__c))</errorConditionFormula>
        <errorDisplayField>phone_1__c</errorDisplayField>
        <errorMessage>Please, full the Phone 1 field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Req_Phone2</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(TEXT(phone_2_area_code__c))), ISBLANK(phone_2__c))</errorConditionFormula>
        <errorDisplayField>phone_2__c</errorDisplayField>
        <errorMessage>Please, full the Phone 2 field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Required_Decisor</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(decision_making_desc__c))</errorConditionFormula>
        <errorDisplayField>decision_making_desc__c</errorDisplayField>
        <errorMessage>Please, complete the decisor.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Required_FN</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
        <errorDisplayField>FirstName</errorDisplayField>
        <errorMessage>Please, complete the contact first name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contact_Validation_Rule_Required_Salutat</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(Salutation))</errorConditionFormula>
        <errorDisplayField>Salutation</errorDisplayField>
        <errorMessage>Please, select the salutation.</errorMessage>
    </validationRules>	
</CustomObject>